name:               hsnoise
version:            0.0.1

cabal-version:      >= 1.2.3
build-type:         Simple

license:            BSD3
license-file:       LICENSE
copyright:          Copyright 2011, Colin Hill
author:             Colin Hill <colin.james.hill@gmail.com>
maintainer:         Colin Hill <colin.james.hill@gmail.com>

stability:          Experimental

homepage:

synopsis:           A coherent 3d noise library.
description:        .
                     
category:           Noise

library
    exposed-modules:
        Noise
        Noise.Perlin
        Noise.Random 
    build-depends:      AC-PPM -any, base -any, vector -any
    ghc-options:        -O2
    hs-source-dirs:     src
 
