cabal-version:      3.4

name:               hsnoise
version:            0.0.3

build-type:         Simple

license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c) 2011, Colin Hill
author:             Colin Hill <colin.james.hill@gmail.com>
maintainer:         Colin Hill <colin.james.hill@gmail.com>

stability:          Experimental

homepage:           https://github.com/colinhect/hsnoise

synopsis:           A coherent 3d noise library.

description:        A coherent 3d noise library loosely based on libnoise.  Currently has an
                    implementation of Perlin noise and ridged multi-fractal noise.  Will 
                    eventually support other noise types as well as noise function combinations.
                    .
                    Code examples included in package.
                    .
                    Example of Perlin noise output image: <http://i.imgur.com/cPOZ2.png>
                    .

category:           Noise

extra-source-files: examples/Perlin.hs, examples/Ridged.hs

library
    exposed-modules:    Numeric.Noise, Numeric.Noise.Perlin, Numeric.Noise.Random,
                        Numeric.Noise.Ridged 
    build-depends:      base >= 4 && < 5, vector
    hs-source-dirs:     src
    ghc-options:        -Wall

source-repository head
    type: git
    location: https://github.com/colinhect/hsnoise.git